fix style issues in the datataset multi-step page with overflow auto scroll

--- a/projects/mistral/frontend/css/style.css
+++ b/projects/mistral/frontend/css/style.css
@@ -369,7 +369,7 @@ input[type="radio"]:checked + .mst--radio-label:after {
 
 .mst--input-checkbox {
   opacity: 0;
-  position: absolute;
+  position: fixed;
 }
 
 .mst--input-checkbox + label {
